# seamproof

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.agent/: EVALS.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
contracts/: seam1-agent-to-robot.yaml  seam2-routing-to-human.yaml  seam3-cost-cycle-slo.yaml
docs/: adopt-seamproof.md  architecture.md  demo-recording-kit.md  demo-script.md  devpost-submission.md  forum-use-case.md  maestro-build.md  presentation-outline.md  product-feedback.md  publish-to-test-manager.md  seam-contracts.md
docs/evidence/: test-manager-evidence.md  test-manager-result.json
docs/img/: generate_diagrams.py  generate_gallery.py
examples/otel/: maestro_seam1_export.json
examples/traces/: golden_happy_path.json  golden_human_approved.json  seam1_amount_mismatch.json  seam2_skipped_approval.json  seam3_cost_regression.json
scenarios/: invoice-exception.suite.yaml
src/seamproof/: __init__.py  __main__.py  analyst.py  cli.py  contracts.py  errors.py  evaluators.py  expr.py  gate.py  ingest.py  publish.py  report.py  trace.py
sut/: README.md
sut/agent/: recon-agent.md  schemas.json
sut/automation/: README.md  entry-points.json  extract.mermaid  main.py  process.mermaid  project.uiproj  pyproject.toml  recon_langchain.py  uipath.json
sut/automation/evaluations/eval-sets/: recon.json
sut/automation/evaluations/evaluators/: json-similarity.json
sut/data/: invoices.json
tests/: conftest.py  test_analyst.py  test_cli.py  test_evaluators.py  test_expr.py  test_ingest.py  test_publish.py  test_recon_langchain.py  test_report.py  test_scenarios.py  test_sut_automation.py
