[project]
name = "seamproof-invoice-sut"
version = "0.1.0"
description = "Invoice-exception process — a UiPath coded automation used as the SeamProof system under test."
authors = [{ name = "Ankit Lade" }]
requires-python = ">=3.11"
dependencies = [
  "uipath>=2.10.0, <2.11.0"
]

[project.optional-dependencies]
# The external LangChain recon agent (cross-platform), using the UiPath LLM
# Gateway as a LangChain chat model. Without it, recon falls back to the
# UiPath LLM Gateway / deterministic extractor.
langchain = [
  "langchain-core>=1.0",
  "uipath-langchain>=0.13",
]
